// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with leftNav prop 1`] = `
<div
  className="sc-cvbbAY bBpPKw"
/>
`;

exports[`renders correctly with no props 1`] = `
<div
  className="sc-cvbbAY fwSTmF"
/>
`;

exports[`renders correctly with sidebar prop 1`] = `
<div
  className="sc-cvbbAY eukJgk"
/>
`;
